// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ClaimPaper with ClaimBody 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-153 Component-root-154 Component-root-152 MuiPaper-rounded"
>
  <h5
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-182 WithStyles(ForwardRef(Typography))-root-183 MuiTypography-h5 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    This is a claim body
  </h5>
</div>
`;

exports[`Storyshots Claims Evidence 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation0 MuiExpansionPanel-root Component-root-218 MuiExpansionPanel-rounded MuiPaper-rounded"
>
  <div
    aria-disabled={false}
    aria-expanded={false}
    className="MuiButtonBase-root MuiExpansionPanelSummary-root Component-root-250"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiExpansionPanelSummary-content Component-content-251"
    >
      <div
        className="MuiBox-root MuiBox-root-262"
      >
        <div
          className="MuiBox-root MuiBox-root-263"
          onClick={[Function]}
        >
          <button
            aria-haspopup="true"
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-266 WithStyles(ForwardRef(Button))-root-267 Component-root-264 Component-root-265 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              66
              %
            </span>
          </button>
        </div>
      </div>
      <div
        className="MuiBox-root MuiBox-root-286"
      >
        <h6
          className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-287 WithStyles(ForwardRef(Typography))-root-288 MuiTypography-h6"
        >
          <a
            className="MuiTypography-root MuiLink-root MuiLink-underlineHover UnstyledLink-root-319 UnstyledLink-root-320 MuiTypography-colorInherit"
            href="/somesay/this-is-another-claim"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
          >
            This is a claim that stretches the limits of this system. It has precisely 255 characters, the maximum number of characters that a claim can have and still be valid. Anything longer than this will be rejected by the system because it is too long. Goodbye.
          </a>
        </h6>
        <div
          className="MuiBox-root MuiBox-root-327"
          onClick={[Function]}
        >
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-266 WithStyles(ForwardRef(Button))-root-328 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I agree
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-266 WithStyles(ForwardRef(Button))-root-329 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I'm not sure
            </span>
          </button>
          <button
            className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-266 WithStyles(ForwardRef(Button))-root-330 MuiButton-text"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onDragLeave={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex={0}
            type="button"
          >
            <span
              className="MuiButton-label"
            >
              I disagree
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      aria-disabled={false}
      aria-hidden={true}
      className="MuiButtonBase-root MuiIconButton-root MuiExpansionPanelSummary-expandIcon MuiIconButton-edgeEnd"
      onBlur={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={-1}
    >
      <span
        className="MuiIconButton-label"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    className="MuiCollapse-container MuiCollapse-hidden"
    style={
      Object {
        "minHeight": "0px",
      }
    }
  >
    <div
      className="MuiCollapse-wrapper"
    >
      <div
        className="MuiCollapse-wrapperInner"
      >
        <div
          role="region"
        >
          <div
            className="MuiExpansionPanelDetails-root"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Claims SupportList 1`] = `""`;

exports[`Storyshots Claims default 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-214 Spinner-root-215 sk-three-bounce"
>
  <div />
  <div />
  <div />
</div>
`;

exports[`Storyshots Header default 1`] = `
<header>
  <header
    className="MuiPaper-root MuiPaper-elevation4 MuiAppBar-root MuiAppBar-positionStatic MuiAppBar-colorDefault"
  >
    <div
      className="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root-70 WithStyles(ForwardRef(Toolbar))-root-71 MuiToolbar-gutters"
    >
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-77 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <img
            alt="logo"
            className="Component-logo-98"
            src="logo.svg"
          />
        </span>
      </button>
      <h6
        className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-102 WithStyles(ForwardRef(Typography))-root-103 Component-ohhey-33 MuiTypography-h6"
      >
        <a
          className="MuiTypography-root MuiLink-root MuiLink-underlineHover UnstyledLink-root-134 UnstyledLink-root-135 MuiTypography-colorInherit"
          href="/"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
        >
          oh hey!
        </a>
      </h6>
      <button
        aria-haspopup="true"
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-76 WithStyles(ForwardRef(Button))-root-142 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root MuiSvgIcon-colorPrimary"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 3c1.66 0 3 1.34 3 3s-1.34 3-3 3-3-1.34-3-3 1.34-3 3-3zm0 14.2c-2.5 0-4.71-1.28-6-3.22.03-1.99 4-3.08 6-3.08 1.99 0 5.97 1.09 6 3.08-1.29 1.94-3.5 3.22-6 3.22z"
            />
          </svg>
        </span>
      </button>
    </div>
  </header>
</header>
`;

exports[`Storyshots Sources default 1`] = `
<div
  className="MuiBox-root MuiBox-root-488"
>
  <sup
    className="Component-sup-484"
    onMouseEnter={[Function]}
  >
    [
    <span
      className="Component-note-485"
    >
      *
    </span>
    ]
  </sup>
</div>
`;

exports[`Storyshots UI components ClaimPaper 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-4 Component-root-5 Component-root-3 MuiPaper-rounded"
>
  This is some paper on which to write a claim.
</div>
`;

exports[`Storyshots UI components Spinner 1`] = `
<div
  className="sk-fade-in sk-spinner Spinner-root-1 Spinner-root-2 sk-chasing-dots"
>
  <div />
  <div />
</div>
`;

exports[`Storyshots UserClaim default 1`] = `
<div
  className="MuiPaper-root MuiPaper-elevation1 Component-root-356 Component-root-357 Component-root-355 MuiPaper-rounded"
>
  <div
    className="MuiToolbar-root MuiToolbar-regular WithStyles(ForwardRef(Toolbar))-root-385 WithStyles(ForwardRef(Toolbar))-root-386 MuiToolbar-gutters"
  >
    <div
      className="MuiBox-root MuiBox-root-392"
    />
    <div
      className="MuiBox-root MuiBox-root-393"
    >
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover UnstyledLink-root-394 UnstyledLink-root-395 MuiTypography-colorInherit"
        href="/somesay/this-is-a-claim"
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
          focusable="false"
          role="presentation"
          viewBox="0 0 24 24"
        >
          <path
            d="M16 11c1.66 0 2.99-1.34 2.99-3S17.66 5 16 5c-1.66 0-3 1.34-3 3s1.34 3 3 3zm-8 0c1.66 0 2.99-1.34 2.99-3S9.66 5 8 5C6.34 5 5 6.34 5 8s1.34 3 3 3zm0 2c-2.33 0-7 1.17-7 3.5V19h14v-2.5c0-2.33-4.67-3.5-7-3.5zm8 0c-.29 0-.62.02-.97.05 1.16.84 1.97 1.97 1.97 3.45V19h6v-2.5c0-2.33-4.67-3.5-7-3.5z"
          />
        </svg>
      </a>
      <button
        className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-442 WithStyles(ForwardRef(Button))-root-443 Styled(WithStyles(ForwardRef(Button)))-root-441 MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit"
            focusable="false"
            role="presentation"
            viewBox="0 0 24 24"
          >
            <path
              d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92 1.61 0 2.92-1.31 2.92-2.92s-1.31-2.92-2.92-2.92z"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>
  <h6
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-476 WithStyles(ForwardRef(Typography))-root-477 MuiTypography-subtitle1 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    @
    toby
     believes 
  </h6>
  <h5
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-476 WithStyles(ForwardRef(Typography))-root-478 MuiTypography-h5 MuiTypography-colorTextPrimary MuiTypography-alignCenter"
  >
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover UnstyledLink-root-394 UnstyledLink-root-479 MuiTypography-colorInherit"
      href="/somesay/this-is-a-claim"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
    >
      This is a claim
    </a>
  </h5>
  <p
    className="MuiTypography-root WithStyles(ForwardRef(Typography))-root-476 WithStyles(ForwardRef(Typography))-root-480 MuiTypography-body1 MuiTypography-alignCenter"
  >
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-442 WithStyles(ForwardRef(Button))-root-481 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I agree
      </span>
    </button>
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-442 WithStyles(ForwardRef(Button))-root-482 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I'm not sure
      </span>
    </button>
    <button
      className="MuiButtonBase-root MuiButton-root WithStyles(ForwardRef(Button))-root-442 WithStyles(ForwardRef(Button))-root-483 MuiButton-text"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
        I disagree
      </span>
    </button>
  </p>
  <div>
    
    
    
    
  </div>
</div>
`;
